# stem_slot

./: .gitignore  Cargo.toml  README.md
docs/: links.md  main.md
docs/img/: SlotTrapezoidOpen.dxf  SlotTrapezoidSemi.dxf  cad_bottom_angle_calc.dxf  cad_coil_layout.dxf  cad_coil_layout.dxf~  cad_open_trapezoid.dxf  cad_rectangular.dxf  cad_semi_trapezoid.dxf  cad_side_height_angles.dxf  cad_slot_defs.dxf  cad_slot_defs.dxf~  cad_top_angle_calc.dxf  cad_width_at.dxf  current_displacement_calculator.odg  layer_outlines.odg  semi_regular_polygon.dxf  slot_leakage_flux_overview.odg
docs/stem_slot_create_doc_images/: Cargo.toml
docs/stem_slot_create_doc_images/src/: main.rs
examples/: double_layer_coil_layout.rs  layer_contours.rs  slices_docstring_images.rs  slot_types_showcase.rs
src/: coil_layout.rs  current_displacement.rs  error.rs  lib.rs  open_trapezoid.rs  rectangular.rs  semi_trapezoid.rs  slot.rs
tests/: current_displacement.rs  helper_functions.rs  open_trapezoid.rs  rectangular.rs  semi_trapezoid.rs  slot.rs
